--- a/src/index.scss
+++ b/src/index.scss
@@ -6,8 +6,9 @@ body {
   font-family: 'Rubik', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x:hidden;
 }
+
 
 .Toastify__toast {
   background-color: $headerColor;
@@ -15,6 +16,7 @@ body {
   font-family: inherit;
   font-size: 0.875rem;
   padding: 0.75rem;
+  z-index: 99;
 }
 
 *::-webkit-scrollbar-thumb {
@@ -23,10 +25,6 @@ body {
 }
 *::-webkit-scrollbar {
   width: 0.3rem;
-}
-
-* {
-  overflow-x: hidden;
 }
 
 p {
@@ -44,6 +42,12 @@ p {
 
   .progress-container svg {
     font-size: 1rem !important;
+  }
+
+  .Toastify__toast-container {
+    position: fixed;
+    top: 1rem;
+    padding: 0 1rem;
   }
 }
 
